set(LIB_NAME rspf_plugin)
MESSAGE( "************** LIBRARY SETUP FOR rspf_plugin******************")

find_package(TIFF)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GEOTIFF_INCLUDE_DIR})

FILE(GLOB_RECURSE RSPFPLUGIN_SRCS *.cpp)
FILE(GLOB_RECURSE RSPFPLUGIN_HEADERS *.h)

####
# RSPFPLUGINSMAKINGDLL controls dll linkage on windows.  
# Adding this sets RSPF_PLUGINS_DLL #define TO "__declspec(dllexport)".
###
add_definitions("-DRSPFPLUGINSMAKINGDLL")

RSPF_LINK_LIBRARY(${LIB_NAME}
                   COMPONENT_NAME rspf TYPE "${RSPF_PLUGIN_LINK_TYPE}"
		   LIBRARIES ${RSPF_LIBRARY} ${GEOTIFF_LIBRARY} ${TIFF_LIBARY}
                   HEADERS "${RSPFPLUGIN_HEADERS}"
		   SOURCE_FILES "${RSPFPLUGIN_SRCS}"
                   INSTALL_LIB)


